# security-matching

./: Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: ac.rs  lib.rs  msg.rs  order.rs  prelude.rs  rec.rs  req.rs  sea_orm_active_enums.rs  security.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
present/: auction.puml  auction.tex  main.tex  market.puml  market.tex  matches.puml  matches.tex  security_matching.puml  security_matching.tex  speech.tex
srv/: Cargo.toml
srv/src/: book.rs  deal.rs  main.rs  msg.rs  period.rs  route.rs  security.rs  state.rs
web/: Cargo.toml
web/src/: app.rs  main.rs  route.rs  security.rs
