[package]
name = "srv"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
rust_decimal = "1.36"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
strum = "0.26.2"
dashmap = { version = "6.1", features = ["rayon"] }
implicit-clone = { version = "0.5.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
async-stream = "0.3.5"
futures = "0.3.31"
serde_json = "1.0"
axum = { version = "0.7.5", features = ["macros"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
axum-streams = { version = "0.19.0", features = ["json"] }
erased-serde = "0.4.4"
