[package]
name = "security-matching_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3.30"
gloo-console = "0.3.0"
gloo-net = "0.6.0"
gloo-utils = "0.2.0"
gloo-history = "0.2.2"
implicit-clone = { version = "0.5.0", features = ["serde"] }
js-sys = "0.3.72"
plotters = "0.3.7"
rust_decimal = { version = "1.36", features = ["serde-with-arbitrary-precision"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
yew = { version= "0.21.0", features=["csr"] }
yew-router = "0.18.0"
